--- a/portfolio-landing-page.html
+++ b/portfolio-landing-page.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Diego Aguilar's Portfolio</title>
+    <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Portfolio Landing page</title>
   </head>
-  <link href="styles.css" rel="stylesheet" type="text/css">
+
   <body>
-    <br>
-      <h1>Diego Aguilar</h1>
+      <div class="container">
+      <h1><span style="color:red">Diego Aguilar</span></h1>
+
+      <img src="img/1.jpg" alt="A photo of a man on laptop.">
+
       <br></br>
-      <img src="1.jpg" alt="A photo of a man on laptop.">
-    </br>
       <strong>About Me:</strong>
 
-      <div> <p class="first">
-        My name is Diego Aguilar, I graduated Highschool on 2011. I was enrolled and taking classes at HighLine College in Des Moines, Washington for a year, from 2013 to 2014. 30 credits shy of a AA degree. I worked for a PawnShop as I.T. for about a year and a half. My job after that was within the same field I was an At&t Authorized Tech. Which consisted of physical and warranty repair on cellphones, tablets, computers, etc. just about everythig At&t would sell. I enjoyed the aspect of troubleshooting and problem solveing.
-        I decided to take a programming class because, after much thought into a future career after severeral "dead end" jobs. Programming was a topic that always caught my attention. I did my own learning on free online training courses, but something that ive always wanted to take the next big step forward.
+      <div class=first> <p class="first">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p></div>
-  </body>
-  <body>
-    <h2>Some of my 1st Week's Projects at Epicodus</h2>
-      <div> <p class="second">
-        <ul>
-          <li><a href="https://github.com/diegojaguilar0131/my-first-webpage.git">My First Webpage</a> </li>
-          <li><a href=https://github.com/diegojaguilar0131/my-pet.git>"My Pet</a> <li/>
-          <li><a href=https://github.com/diegojaguilar0131/cupcake-shop.git>Cupcake Shop</a> </li>
-          <li><a href=https://github.com/diegojaguilar0131/boring-lecture.git>Boring Lecture</a> </li>
-          <li><a href=https://github.com/diegojaguilar0131/blogging-site.git>Blogging Site</a> </li>
-        </ul>
+
+      <br></br>
+
+      <h2>Some of my 1st Week's Projects at Epicodus</h2>
+
+        <div> <p class="second">
+          <ul>
+          <li><a href="https://github.com/diegojaguilar0131/my-first-webpage.git">My First Webpage</a></li>
+
+          <li><a href=https://github.com/diegojaguilar0131/my-pet.git>"My Pet</a></li>
+
+          <li><a href=https://github.com/diegojaguilar0131/cupcake-shop.git>Cupcake Shop</a></li>
+
+          <li><a href=https://github.com/diegojaguilar0131/boring-lecture.git>Boring Lecture</a></li>
+
+          <li><a href=https://github.com/diegojaguilar0131/blogging-site.git>Blogging Site</a></li>
+          </ul>
+
       </p></div>
+      </div>
     </body>
 
 </html>
